--- a/.gitignore
+++ b/.gitignore
@@ -305,3 +305,17 @@ TSWLatexianTemp*
 __pycache__/
 *.py[cod]
 *$py.class
+
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+!.vscode/*.code-snippets
+
+# Local History for Visual Studio Code
+.history/
+
+# Built Visual Studio Code Extensions
+*.vsix
+
